# pedia

./: .claudeignore  .gitignore  LICENSE  README.md  flotilla.yaml  pyproject.toml
.pedia/: config.yaml
.pedia/constitution/: product.md  technical.md
.pedia/decisions/: 0001-sqlite-fts5-over-embeddings.md  0002-content-hash-block-ids.md  0003-stdlib-only-runtime.md  0004-universal-context-layer.md
.pedia/docs/imported/: architecture.md  readme.md
.pedia/north-stars/: 01-deterministic-knowledge-for-agents.md
.pedia/prds/: pedia-v1.md
.pedia/specs/001-indexing-engine/: plan.md  spec.md
.pedia/specs/002-symbol-linking/: spec.md
.pedia/specs/003-backfill/: spec.md
docs/: architecture.md
pedia/: __init__.py  __main__.py  backfill.py  backfill_fs.py  backfill_web.py  cli.py  config.py  hooks.py  index.py  parser.py  query.py  refresh.py  symbols.py  trace.py
pedia/doctypes/: __init__.py  constitution.py  decision.py  documentation.py  north_star.py  plan.py  prd.py  spec.py  technical_requirement.py
pedia/web/: __init__.py  server.py
pedia/web/static/: app.js  block.js  doc.js  graph.js  index.html  search.js  style.css  toc.js
plugin/: README.md
plugin/agents/: pedia-keeper.md
plugin/commands/: pedia.md
tests/: test_backfill.py  test_smoke.py  test_web.py
